added credits to the creator of the background image, focus style on inputs and error styles on inputs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <div class="leftSideBar">
         <img src="photo-for-project.jpg" alt="">
-        <div class="backgroundForLogo"></div>
-        <p>Awesome!</p>
+            <div class="backgroundForLogo">
+                <img id ="odin" src="odin-lined.png" alt="">
+            </div>
+            <p>Awesome!</p> 
+            <p> Photo by <a href="https://unsplash.com/@haliewestphoto">Hailie West</a> on <a href="https://unsplash.com">Unplash</a></p>
     </div>
     <div class="rightSide">
         <p>This is not a real service, just trying out some HTML and CSS styling, fill out the form below, also this text is only for filling up space, should i do a lorem ipsum? idk<br>
